# nymoris

./: .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  convert.py  init.c  kacos_stripped  limine.conf  limine.conf.bak  limine.conf.good  linker.ld  linker_test.ld  llm.c  llm.h  make_test_model.py  screen.ppm  test_api_server.py  test_model.nymollm  test_model.nymollm.vocab
.claude/skills/: documentation.md  security.md  testing.md
agent/: Cargo.toml
agent/.cargo/: config.toml
agent/src/: main.rs
kernel/: Cargo.toml  x86_64-nymoris.json
kernel/src/: agent.rs  boot.rs  commands.rs  elf.rs  framebuffer.rs  gdt.rs  idt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  main.rs.bak  memory.rs  pci.rs  scheduler.rs  serial.rs  shell.rs  syscall.rs  vga.rs
kernel/src/fs/: ramdisk.rs
kernel/src/memory/: allocator.rs  heap.rs  mod.rs  paging.rs
kernel/src/net/: arp.rs  ethernet.rs  http.rs  icmp.rs  ip.rs  mod.rs  tcp.rs  virtio.rs
kernel/src/usb/: ehci.rs  hid.rs  mod.rs  uhci.rs
limine/: BOOTAA64.EFI  BOOTLOONGARCH64.EFI  BOOTRISCV64.EFI  limine  limine-bios-hdd.h
limine-binary/: limine.c
limine/limine.dSYM/Contents/Resources/DWARF/: limine
scripts/: https_proxy.py
scripts/deploy/: README.md  grub.cfg  mkiso.sh
userspace/hello/: gen_elf.py  hello.asm  hello.elf  linker.ld
