[package]
name = "nymoris"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
lto = false
opt-level = 1

[profile.release]
panic = "abort"
lto = true
opt-level = 2

[dependencies]
limine = "0.6"
x86_64 = "0.15"
pic8259 = "0.11"
pc-keyboard = "0.8"
spin = "0.9"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
volatile = "0.4"
bitflags = "2.4"
uuid = { version = "1.6", default-features = false }
